--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -19,8 +19,8 @@
     "@next/mdx": "^15.0.3",
     "@next/third-parties": "^15.1.2",
     "@repo/ui": "*",
-    "@tanstack/react-query": "^5.59.14",
-    "@tanstack/react-virtual": "^3.10.9",
+    "@tanstack/react-query": "5.90.5",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/mdx": "^2.0.13",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
@@ -61,8 +61,8 @@
     "throttle-debounce": "^5.0.2",
     "tiny-invariant": "^1.3.3",
     "toformat": "^2.0.0",
-    "viem": "^2.21.26",
-    "wagmi": "^2.12.17",
+    "viem": "2.38.4",
+    "wagmi": "2.18.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.5"
   },
@@ -109,6 +109,6 @@
     "storybook-next-intl": "^1.1.6",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.16",
-    "typescript": "5.7.2"
+    "typescript": "^5.7.2"
   }
 }
